# anchor-engine-rust

./: .gitignore  AB_TESTING_SNAPSHOTS_COMPLETE.md  API_SUMMARY.md  BUILD_ISSUES_AND_FIXES.md  BUILD_SUMMARY.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_CLEANUP_COMPLETE.md  GITHUB_INTEGRATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  README.md  ROUTES_DOCUMENTATION.md  STATUS.md  TEST_FIXES_SUMMARY.md  api_test.js  api_test_es.js  build.bat  simple_test.js  start-mcp.bat  start.bat  user_settings.json
crates/anchor-engine/: Cargo.toml
crates/anchor-engine/benches/: engine_benchmarks.rs
crates/anchor-engine/src/: api.rs  config.rs  db.rs  dto.rs  lib.rs  main.rs  models.rs  service.rs  storage.rs
crates/anchor-engine/src/extractors/: github.rs  mod.rs
crates/anchor-engine/src/services/: auto_synonym_generator.rs  github.rs  ingestion.rs  mod.rs  transient_filter.rs  watchdog.rs
crates/anchor-engine/static/: index.html  search.html
crates/anchor-engine/tests/: pointer_only_integration.rs
crates/anchor-mcp/: Cargo.toml  README.md
crates/anchor-mcp/src/: main.rs
crates/anchor-mcp/tests/: mcp_integration_test.rs
crates/anchor-ui/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  index.html  tauri.conf.json
crates/anchor-ui/assets/: components.css  style.css
crates/anchor-ui/src/: api.rs  app.rs  lib.rs  routes.rs  state.rs
crates/anchor-ui/src/components/: badge.rs  button.rs  glass_panel.rs  input.rs  loading.rs
crates/anchor-ui/src/features/: chat_interface.rs  path_manager.rs  quarantine_page.rs  search_column.rs  settings.rs
docs/: COMPARISON_WITH_NODE.md  INDEX.md  README.md  WHITEPAPER.md  documentation_cleanup_summary.md
docs-backup-feb-2026/: BUILD_STATUS.md
docs/api/: reference.md
docs/guides/: mcp-integration.md
docs/setup/: installation.md
docs/technical/: CROSS_COMPILATION.md  FULL_FEATURED_GITHUB_INTEGRATION.md  performance.md
docs/troubleshooting/: common-issues.md
scripts/: cleanup-build.ps1
specs/: phase2_database_migration.md  plan.md  pointer_only_implementation_plan.md  spec.md  tasks.md
specs/archive/: LESSONS_LEARNED.md
specs/archive-standards/archive/: IMPLEMENTATION_REPORT.md  LESSONS_LEARNED.md
specs/archive-standards/archive/feb-2026-backup/: RUST_PACKAGES_SUMMARY.md
specs/archive/feb-2026-backup/: CONSOLIDATION_SUMMARY.md  FRONTEND_UI_SUMMARY.md
specs/current-standards/: 001-architecture-spec.md  003-external-data-ingestion.md  004-secure-credential-storage.md  022-documentation-hygiene.md  README.md  code_style.md  doc_policy.md  testing.md  zero_copy_storage.md
specs/proposals/: phase3_service_integration.md  tasks.md
specs/standards/: README.md  doc_policy.md  mcp_server.md  profiling.md
