[package]
name = "anchor-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Anchor OS knowledge engine with SQLite storage and HTTP API"
repository = "https://github.com/your-org/anchor-rewrite-v0"
authors = ["Anchor OS Contributors"]

[dependencies]
# Core Anchor packages (located in ../../packages/)
anchor-fingerprint = { path = "../../../packages/anchor-fingerprint", version = "0.1.0" }
anchor-atomizer = { path = "../../../packages/anchor-atomizer", version = "0.1.0" }
anchor-keyextract = { path = "../../../packages/anchor-keyextract", version = "0.1.0" }
anchor-tagwalker = { path = "../../../packages/anchor-tagwalker", version = "0.1.0" }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
http = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tarball extraction
flate2 = "1.0"
tar = "0.4"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
ignore = "0.4.25"
regex = "1.10"

# Secure credential storage
keyring = "2.3"

# Cryptography for webhook verification
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "engine_benchmarks"
harness = false

[[bin]]
name = "anchor-engine"
path = "src/main.rs"
