[package]
name = "anchor-ui"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Sovereign Knowledge UI for Anchor Engine"
repository = "https://github.com/your-org/anchor-rewrite-v0"
authors = ["Anchor OS Contributors"]

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# HTTP Client (WASM-compatible)
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Window",
    "console",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "HtmlInputElement",
    "Event",
    "EventTarget"
] }

# Utilities
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

# Logging
tracing = "0.1"
wasm-logger = "0.2"

# Error handling
thiserror = "1.0"
